package com.japhy.design.prototype;

/**
 * @author Japhy
 * @since 2020/11/16 14:54
 */
public interface Prototype {

    Object copy();

}
